--- a/html/contact.html
+++ b/html/contact.html
@@ -21,10 +21,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active" href="index.html">About</a>
-        <a class="nav-item nav-link" href="html/contact.html">Contact</a>
-        <a class="nav-item nav-link" href="html/portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="html/resume.html">Resume</a>
+        <a class="nav-item nav-link" href="../index.html">About</a>
+        <a class="nav-item nav-link active" href="contact.html">Contact</a>
+        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href="resume.html">Resume</a>
       </div>
     </div>
   </nav>
