--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -14,7 +14,7 @@
 
 <header>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary container">
-    <h1 class="navbar-brand">Anthony Bergen</h1>
+    <h1 class="navbar-brand ">Anthony Bergen</h1>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link ml-auto" href="../index.html">About</a>
         <a class="nav-item nav-link ml-auto" href="contact.html">Contact</a>
-        <a class="nav-item nav-link ml-auto active" href=portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link ml-auto active" href="portfolio.html">Portfolio</a>
         <a class="nav-item nav-link ml-auto" href="resume.html">Resume</a>
       </div>
     </div>
