--- a/index.html
+++ b/index.html
@@ -13,24 +13,47 @@
 </head>
 
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary container">
-    <h1 class="navbar-brand">Anthony Bergen</h1>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link ml-auto active" href="index.html">About</a>
-        <a class="nav-item nav-link ml-auto" href="html/contact.html">Contact</a>
-        <a class="nav-item nav-link ml-auto" href="html/portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link ml-auto" href="html/resume.html">Resume</a>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand container" href="index.html">
+      <h1>Anthony Bergen</strong></h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link ml-auto active" href="index.html">About</a>
+          <a class="nav-item nav-link ml-auto" href="html/contact.html">Contact</a>
+          <a class="nav-item nav-link ml-auto" href="html/portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link ml-auto" href="html/resume.html">Resume</a>
+        </div>
       </div>
-    </div>
   </nav>
 </header>
 
-<body>
+<body style="background-color:lightgrey">
+
+  <main class="container jumbotron" style="margin-top:9%">
+    <div class="row align-items-center">
+      <div class="col-sm-4">
+        <h2 class="card-text">About Me</h2>
+        <div class="card" style="width: 20rem;">
+          <img class="card-img-top"
+            src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
+            alt="Image of me">
+          <div class="card-body">
+            <p>I am a Software Engineer proficient in front-end and back-end web development with over ten years of
+              executive sales and managerial experience across a diverse list of industries.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-4">
+      </div>
+    </div>
+  </main>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
