Added sticky footer

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <header>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand container" href="index.html">
-      <h1>Anthony Bergen</strong></h1>
+    <a class="navbar-brand container">
+      <h1>Anthony Bergen</h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,29 +31,35 @@
   </nav>
 </header>
 
-<body style="background-color:lightgrey">
+<body>
 
-  <main class="container jumbotron" style="margin-top:9%">
-    <div class="row align-items-center">
-      <div class="col-sm-4">
+  <main class="container jumbotron" style="margin-top:10%">
+    <div>
+      <div class="col-sm-6">
         <h2 class="card-text">About Me</h2>
         <div class="card" style="width: 20rem;">
           <img class="card-img-top"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
           <div class="card-body">
-            <p>I am a Software Engineer proficient in front-end and back-end web development with over ten years of
-              executive sales and managerial experience across a diverse list of industries.</p>
+            <p>Anthony Bergen is a software engineer proficient in front-end and back-end web
+              development.</p>
+
+            <p>He has over ten years of executive sales and managerial experience, across a diverse list of
+              industries including cybersecurity, instrumentation engineering and automation, telecommunications, and
+              logistics.</p>
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
-      </div>
-      <div class="col-sm-4">
+      <div class="col-sm-6">
       </div>
     </div>
   </main>
-
+  <footer class="page-footer fixed-bottom">
+    <div class="text-center py-4 bg-primary">Created by Anthony Bergen
+      <a href="index.html">https://adbergen.github.io/responsiveness_portfolio/</a>
+    </div>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
