--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="col-sm-6">
         <h2 class="card-text">About Me</h2>
         <div class="card" style="width: 20rem;">
-          <img class="card-img-top"
+          <img class="card-img-top rounded-circle w-75 p-3"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
           <div class="card-body">
