added background and text colors

--- a/index.html
+++ b/index.html
@@ -31,33 +31,31 @@
   </nav>
 </header>
 
-<body>
+<body style="background-color: silver;">
 
-  <main class="container jumbotron" style="margin-top:10%">
-    <div>
-      <div class="col-sm-6">
-        <h2 class="card-text">About Me</h2>
-        <div class="card" style="width: 20rem;">
-          <img class="card-img-top rounded-circle w-75 p-3"
+  <main class="container text-center" style="margin-top:10%">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="card" style="size: 40%">
+          <h2 class="card-title">About Me</h2>
+          <img class="card rounded-circle w-25 p-3" style="background-color: light;"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
           <div class="card-body">
-            <p>Anthony Bergen is a software engineer proficient in front-end and back-end web
-              development.</p>
+            <h3 class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
+              development.</h3>
 
-            <p>He has over ten years of executive sales and managerial experience, across a diverse list of
+            <h3>He has over ten years of executive sales and managerial experience, across a diverse list of
               industries including cybersecurity, instrumentation engineering and automation, telecommunications, and
-              logistics.</p>
+              logistics.</h3>
           </div>
         </div>
-      </div>
-      <div class="col-sm-6">
       </div>
     </div>
   </main>
   <footer class="page-footer fixed-bottom">
-    <div class="text-center py-3 bg-primary">Created by Anthony Bergen
-      <a href="index.html">https://adbergen.github.io/responsiveness_portfolio/</a>
+    <div style="color: black;" class="text-center py-3 bg-primary"><strong>Created by Anthony Bergen |</strong>
+      <a style="color: white;" href="index.html">https://adbergen.github.io/responsiveness_portfolio/</a>
     </div>
   </footer>
 
