Fixed about me container

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 
 <body style="background-color: silver;">
 
-  <main class="container text-center" style="margin-top:10%">
+  <main class="container-fluid text-center" style="margin-top:7.5%">
     <div class="row">
-      <div class="col-sm-12">
-        <div class="card" style="size: 40%">
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
           <h2 class="card-title">About Me</h2>
-          <img class="card rounded-circle w-25 p-3" style="background-color: light;"
+          <img class="img-fluid rounded-circle w-50 p-3 mx-auto"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
           <div class="card-body">
@@ -51,9 +53,11 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4">
+      </div>
     </div>
   </main>
-  <footer class="page-footer fixed-bottom">
+  <footer class="page-footer footer-expand fixed-bottom">
     <div style="color: black;" class="text-center py-3 bg-primary"><strong>Created by Anthony Bergen |</strong>
       <a style="color: white;" href="index.html">https://adbergen.github.io/responsiveness_portfolio/</a>
     </div>
