Adjusted spacing and margin for about me

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand container-fluid">
       <h1>Anthony Bergen</h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,8 +33,8 @@
 
 <body style="background-color: silver;">
 
-  <main class="container-fluid text-center" style="margin-top:7.5%">
-    <div class="row">
+  <main class="container-fluid text-center mt-2">
+    <div class=" row">
       <div class="col-sm-4">
       </div>
       <div class="col-sm-4">
