adjusted margin and spacing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body style="background-color: silver;">
 
-  <main class="container-fluid text-center mt-2">
+  <main class="container-fluid text-center mt-4 mb-4">
     <div class=" row">
       <div class="col-sm-4">
       </div>
@@ -45,11 +45,13 @@
             alt="Image of me">
           <div class="card-body">
             <h3 class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
-              development.</h3>
-
-            <h3>He has over ten years of executive sales and managerial experience, across a diverse list of
-              industries including cybersecurity, instrumentation engineering and automation, telecommunications, and
-              logistics.</h3>
+              development.
+            </h3>
+            <h3 class="card-text">
+              He has over ten years of executive sales and managerial experience, across a diverse
+              list of industries including cybersecurity, instrumentation engineering and automation,
+              telecommunications, and logistics.
+            </h3>
           </div>
         </div>
       </div>
@@ -58,7 +60,7 @@
     </div>
   </main>
   <footer class="page-footer footer-expand fixed-bottom">
-    <div style="color: black;" class="text-center py-3 bg-primary"><strong>Created by Anthony Bergen |</strong>
+    <div style="color: black;" class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
       <a style="color: white;" href="index.html">https://adbergen.github.io/responsiveness_portfolio/</a>
     </div>
   </footer>
