added paragraph break

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <h3 class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
               development.
             </h3>
+            <break></break>
             <h3 class="card-text">
               He has over ten years of executive sales and managerial experience, across a diverse
               list of industries including cybersecurity, instrumentation engineering and automation,
