--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="col-sm-4">
         <div class="card">
-          <h2 class="card-title">About Me</h2>
+          <h2 class="card-title p-2">About Me</h2>
           <img class="img-fluid rounded-circle w-50 p-3 mx-auto"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
@@ -48,7 +48,7 @@
               development.
             </h3>
 
-            <h3 class="card-text p-1">
+            <h3 class="card-text p-2">
               He has over ten years of executive sales and managerial experience, across a diverse
               list of industries including cybersecurity, instrumentation engineering and automation,
               telecommunications, and logistics.
