--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="col-sm-4">
         <div class="card">
           <h2 class="card-title p-2">About Me</h2>
-          <img class="img-fluid rounded-circle w-50 p-3 mx-auto"
+          <img class="img-fluid rounded-circle p-3 mx-auto"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
           <div class="card-body">
