--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body style="background-color: silver;">
 
   <main class="container-fluid text-center mt-4 mb-5">
-    <div class=" row">
+    <div class="row pb-4">
       <div class="col-sm-4">
       </div>
       <div class="col-sm-4">
@@ -62,7 +62,8 @@
   </main>
   <footer class="page-footer footer-expand fixed-bottom">
     <div style="color: black;" class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
-      <a style="color: white;" href="index.html">https://adbergen.github.io/responsiveness_portfolio/</a>
+      <a style="color: white;"
+        href="https://adbergen.github.io/responsiveness_portfolio/">https://adbergen.github.io/responsiveness_portfolio/</a>
     </div>
   </footer>
 
