Added css file and moved styling for cleaner code and organization

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   </nav>
 </header>
 
-<body style="background-color: silver;">
+<body>
 
   <main class="container-fluid text-center mt-3 mb-5">
     <div class="row pb-5">
       <div class="col-sm-4">
       </div>
       <div class="col-sm-4">
-        <div class="card">
+        <div class="card border border-dark">
           <h2 class="card-title p-2">About Me</h2>
           <img class="img-fluid rounded-circle p-3 mx-auto"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
@@ -59,16 +59,18 @@
       </div>
     </div>
   </main>
+
   <footer class="page-footer footer-expand fixed-bottom">
-    <div style="color: black;" class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
-      <a style="color: white;"
-        href="https://adbergen.github.io/responsiveness_portfolio/">https://adbergen.github.io/responsiveness_portfolio/</a>
+    <div class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
+      <a href="https://adbergen.github.io/responsiveness_portfolio/">https://adbergen.github.io/responsiveness_portfolio/
+      </a>
     </div>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
