Added horizontal line to about me

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </div>
       <div class="col-sm-4">
         <div class="card border border-dark">
-          <h2 class="card-title p-2">About Me</h2>
+          <h2 class="card-title pt-4">About Me</h2>
+          <hr>
           <img class="img-fluid rounded-circle p-3 mx-auto"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
