--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
           <a class="nav-item nav-link ml-auto active" href="index.html">About</a>
           <a class="nav-item nav-link ml-auto" href="html/contact.html">Contact</a>
           <a class="nav-item nav-link ml-auto" href="html/portfolio.html">Portfolio</a>
-          <a class="nav-item nav-link ml-auto" href="html/resume.html">Resume</a>
         </div>
       </div>
   </nav>
@@ -45,14 +44,14 @@
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
             alt="Image of me">
           <div class="card-body">
-            <h3 class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
+            <div class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
               development.
-            </h3>
-            <h3 class="card-text p-2">
+            </div>
+            <div class="card-text p-2">
               He has over ten years of executive sales and managerial experience, across a diverse
               list of industries including cybersecurity, instrumentation engineering and automation,
               telecommunications, and logistics.
-            </h3>
+            </div>
           </div>
         </div>
       </div>
