--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -13,28 +13,64 @@
 </head>
 
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary container">
-    <h1 class="navbar-brand ">Anthony Bergen</h1>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link ml-auto" href="../index.html">About</a>
-        <a class="nav-item nav-link ml-auto active" href="contact.html">Contact</a>
-        <a class="nav-item nav-link ml-auto" href="portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link ml-auto" href="resume.html">Resume</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand container-fluid">
+      <h1>Anthony Bergen</h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link ml-auto" href="../../index.html">About</a>
+          <a class="nav-item nav-link ml-auto" href="portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link ml-auto active" href="contact.html">Contact</a>
+        </div>
       </div>
-    </div>
   </nav>
 </header>
 
 <body>
 
+  <main class="container-fluid text-center mt-3 mb-5">
+    <div class="row pb-5">
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-4">
+        <div class="card border border-dark">
+          <h2 class="card-title pt-4">About Me</h2>
+          <hr>
+          <img class="img-fluid rounded-circle p-3 mx-auto"
+            src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
+            alt="Image of me">
+          <div class="card-body">
+            <div class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
+              development.
+            </div>
+            <div class="card-text p-2">
+              He has over ten years of executive sales and managerial experience, across a diverse
+              list of industries including cybersecurity, instrumentation engineering and automation,
+              telecommunications, and logistics.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+      </div>
+    </div>
+  </main>
+
+  <footer class="page-footer footer-expand fixed-bottom">
+    <div class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
+      <a href="https://adbergen.github.io/responsiveness_portfolio/">https://adbergen.github.io/responsiveness_portfolio/
+      </a>
+    </div>
+  </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
