--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link ml-auto active" href="index.html">About</a>
-          <a class="nav-item nav-link ml-auto" href="html/portfolio.html">Portfolio</a>
-          <a class="nav-item nav-link ml-auto" href="html/contact.html">Contact</a>
+          <a class="nav-item nav-link ml-auto" href="assets/html/portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link ml-auto" href="assets/html/contact.html">Contact</a>
         </div>
       </div>
   </nav>
