--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -38,21 +38,28 @@
       </div>
       <div class="col-sm-4">
         <div class="card border border-dark">
-          <h2 class="card-title pt-4">About Me</h2>
-          <hr>
-          <img class="img-fluid rounded-circle p-3 mx-auto"
-            src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
-            alt="Image of me">
-          <div class="card-body">
-            <div class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
-              development.
+          <form class="pt-3">
+            <h2>Contact</h2>
+            <hr>
+            <div class="form-group">
+              <div class="row">
+                <div class="col">
+                  <label for="exampleFormControlInput1">Name</label>
+                  <input type="text" class="form-control" placeholder="First name">
+                </div>
+                <div class="col">
+                  <label for="exampleFormControlInput1">Last Name</label>
+                  <input type="text" class="form-control" placeholder="Last name">
+                </div>
+              </div>
+              <label for="emailAdress">Email address</label>
+              <input type="email" class="form-control" id="emailAdress" placeholder="name@example.com">
             </div>
-            <div class="card-text p-2">
-              He has over ten years of executive sales and managerial experience, across a diverse
-              list of industries including cybersecurity, instrumentation engineering and automation,
-              telecommunications, and logistics.
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
-          </div>
+          </form>
         </div>
       </div>
       <div class="col-sm-4">
