--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -32,15 +32,20 @@
 
 <body>
 
-  <section class="container mt-5">
-    <div class="row">
-      <div class="text-left border rounded py- bg-light ">
-        <h2>Portfolio</h2>
+  <main class="container-fluid text-center mt-3 mb-5">
+    <div class="row pb-5">
+      <div class="col-sm-4">
+      </div>
+      <div class="col-sm-4">
+        <div class="card border border-dark">
+          <h2 class="card-title">Portfolio</h2>
+        </div>
       </div>
     </div>
-  </section>
-
-  <main class="container-fluid text-center mt-3 mb-5">
+    </div>
+    <div class="col-sm-4">
+    </div>
+    </div>
     <div class="row pb-5">
       <div class="col-sm-4">
         <div class="card border border-dark">
