--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary container-fluid">
+    <a class="navbar-brand" href="https://adbergen.github.io/responsiveness_portfolio/">
       <h1>Anthony Bergen</h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
