adjusted link name for mobile for each html page

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -13,9 +13,10 @@
 </head>
 
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary container-fluid">
-    <a class="navbar-brand" href="https://adbergen.github.io/responsiveness_portfolio/">
-      <h1>Anthony Bergen</h1>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://adbergen.github.io/responsiveness_portfolio/"><strong>Anthony
+          Bergen</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
