--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://adbergen.github.io/responsiveness_portfolio/"><strong>Anthony
-          Bergen</strong></a>
+      <a class="navbar-brand" href="https://adbergen.github.io/responsiveness-portfolio/"><button
+          class="btn btn-primary btn-lg">Anthony
+          Bergen</button></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
