added top padding to portfolio

--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -40,7 +40,7 @@
     <div class="row pb-3">
       <div class="col-lg-12">
         <div class="card">
-          <h2 class="card-title">
+          <h2 class="card-title pt-2">
             Portfolio
           </h2>
         </div>
