--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -31,6 +31,7 @@
             <a class="nav-item nav-link ml-auto active" href="contact.html">Contact</a>
           </div>
         </div>
+      </div>
     </nav>
   </header>
 
@@ -48,12 +49,12 @@
             <div class="form-group">
               <div class="row">
                 <div class="col">
-                  <label for="exampleFormControlInput1">Name</label>
-                  <input type="text" class="form-control" placeholder="First name">
+                  <label for="firstName">Name</label>
+                  <input type="text" class="form-control" id="firstName" placeholder="First name">
                 </div>
                 <div class="col">
-                  <label for="exampleFormControlInput1">Last Name</label>
-                  <input type="text" class="form-control" placeholder="Last name">
+                  <label for="lastName">Last Name</label>
+                  <input type="text" class="form-control" id="lastName" placeholder="Last name">
                 </div>
               </div>
               <label for="emailAdress">Email address</label>
