--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -31,6 +31,7 @@
             <a class="nav-item nav-link ml-auto" href="contact.html">Contact</a>
           </div>
         </div>
+      </div>
     </nav>
   </header>
 
