--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -17,9 +17,8 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="https://adbergen.github.io/responsiveness-portfolio/"><button
-            class="btn btn-dark btn-lg btn-ouline-dark"><strong>Anthony
-              Bergen</strong></button></a>
+        <a class="navbar-brand" href="https://adbergen.github.io/responsiveness-portfolio/"><strong>Anthony
+            Bergen</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
