added html markup

--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -9,12 +9,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
+  <!-- title starts here -->
   <title>Anthony Bergen | Software Engineer</title>
+  <!-- title ends here -->
 </head>
 
 <body>
-
   <header>
+
+    <!-- navbar starts here -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="https://adbergen.github.io/responsiveness-portfolio/"><strong>Anthony
@@ -25,17 +28,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
+            <!-- navbar links start here -->
             <a class="nav-item nav-link ml-auto" href="../../index.html">About</a>
             <a class="nav-item nav-link ml-auto active" href="portfolio.html">Portfolio</a>
             <a class="nav-item nav-link ml-auto" href="contact.html">Contact</a>
+            <!-- navbar links end here -->
           </div>
         </div>
       </div>
     </nav>
+    <!-- navbar ends here -->
+
   </header>
 
 
-
+  <!-- main/portfolio starts here -->
   <main class="container-fluid text-center mt-3 mb-5">
     <div class="row pb-3">
       <div class="col-lg-12">
@@ -88,17 +95,22 @@
       </div>
     </div>
   </main>
+  <!-- main/portfolio ends here -->
 
+  <!-- footer starts here -->
   <footer class="page-footer footer-expand fixed-bottom">
     <div class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
       <a href="https://adbergen.github.io/responsiveness-portfolio/">https://adbergen.github.io/responsiveness-portfolio/
       </a>
     </div>
   </footer>
+  <!-- footer ends here -->
 
+  <!-- scripts start here -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <!-- scripts end here -->
 
 </body>
 
