adjusted padding in contact form

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -48,7 +48,7 @@
       </div>
       <div class="col-sm-4">
         <div class="card border border-dark">
-          <form class="pt-3">
+          <form class="p-3">
             <h2>Contact</h2>
             <hr>
             <div class="form-group">
