added more markup and html semantics

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -48,13 +48,14 @@
       </div>
       <div class="col-sm-4">
         <div class="card border border-dark">
+          <!-- form starts here -->
           <form class="p-3">
             <h2>Contact</h2>
             <hr>
             <div class="form-group">
-              <div class="row">
+              <div class="row pb-3">
                 <div class="col">
-                  <label for="firstName">Name</label>
+                  <label for="firstName">First Name</label>
                   <input type="text" class="form-control" id="firstName" placeholder="First name">
                 </div>
                 <div class="col">
@@ -62,14 +63,15 @@
                   <input type="text" class="form-control" id="lastName" placeholder="Last name">
                 </div>
               </div>
-              <label for="emailAdress">Email address</label>
-              <input type="email" class="form-control" id="emailAdress" placeholder="name@example.com">
+              <label for="emailAddress">Email address</label>
+              <input type="email" class="form-control" id="emailAddress" placeholder="name@example.com">
             </div>
             <div class="form-group">
               <label for="message">Message</label>
               <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
           </form>
+          <!-- form ends here -->
         </div>
       </div>
       <div class="col-sm-4">
