--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       <div class="col-sm-4">
       </div>
       <div class="col-sm-4">
-        <div class="card border border-dark">
+        <!-- article starts here -->
+        <article class="card border border-dark">
           <h2 class="card-title pt-4">About</h2>
           <hr>
           <img class="img-fluid rounded-circle p-3 mx-auto"
@@ -62,7 +63,8 @@
               telecommunications, and logistics.
             </div>
           </div>
-        </div>
+        </article>
+        <!-- article ends here -->
       </div>
       <div class="col-sm-4">
       </div>
