--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -46,16 +46,17 @@
   <main class="container-fluid text-center mt-3 mb-5">
     <div class="row pb-3">
       <div class="col-lg-12">
-        <div class="card">
+        <!-- sections start here -->
+        <section class="card">
           <h2 class="card-title pt-2">
             Portfolio
           </h2>
-        </div>
+        </section>
       </div>
     </div>
     <div class="row pb-5">
       <div class="col-sm-4 pb-3">
-        <div class="card border border-dark">
+        <section class="card border border-dark">
           <h3 class="card-title pt-4">Password Generator</h3>
           <hr>
           <img class="img-fluid rounded-circle p-3 mx-auto"
@@ -65,10 +66,10 @@
               <a href="#"><strong>View</strong></a>
             </div>
           </div>
-        </div>
+        </section>
       </div>
       <div class="col-sm-4 pb-3">
-        <div class="card border border-dark">
+        <section class="card border border-dark">
           <h3 class="card-title pt-4">Day Planner</h3>
           <hr>
           <img class="img-fluid rounded-circle p-3 mx-auto"
@@ -78,10 +79,10 @@
               <a href="#"><strong>View</strong></a>
             </div>
           </div>
-        </div>
+        </section>
       </div>
       <div class="col-sm-4 pb-3">
-        <div class="card border border-dark">
+        <section class="card border border-dark">
           <h3 class="card-title pt-4">Weather Dashboard</h3>
           <hr>
           <img class="img-fluid rounded-circle p-3 mx-auto"
@@ -91,7 +92,8 @@
               <a href="#"><strong>View</strong></a>
             </div>
           </div>
-        </div>
+        </section>
+        <!-- sections end here -->
       </div>
     </div>
   </main>
