added sociam media icons

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -33,6 +33,13 @@
             <a class="nav-item nav-link ml-auto" href="../../index.html">About</a>
             <a class="nav-item nav-link ml-auto" href="portfolio.html">Portfolio</a>
             <a class="nav-item nav-link ml-auto active" href="contact.html">Contact</a>
+            <a class="nav-item nav-link ml-auto" id="github-mark" href="https://github.com/adbergen" target="_blank">
+              <img class="img-fluid" src="assets/images/github-mark/github-mark-32px.png" alt="github mark icon">
+            </a>
+            <a class="nav-item nav-link ml-auto" id="linkedin" href="www.linkedin.com/in/anthonybergen" target="_blank">
+              <img class="img-fluid" src="assets/images/linkedin/linkedin.png" alt="linkedin icon">
+            </a>
+            <!-- navba
             <!-- navbar links end here -->
           </div>
         </div>
@@ -71,6 +78,7 @@
               <label for="message">Message</label>
               <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
+            <input class="btn btn-primary" type="submit" value="Submit">
           </form>
           <!-- form ends here -->
         </div>
