--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- title starts here -->
   <title>Anthony Bergen | Software Engineer</title>
@@ -33,6 +34,12 @@
             <a class="nav-item nav-link ml-auto active" href="index.html">About</a>
             <a class="nav-item nav-link ml-auto" href="assets/html/portfolio.html">Portfolio</a>
             <a class="nav-item nav-link ml-auto" href="assets/html/contact.html">Contact</a>
+            <a class="nav-item nav-link ml-auto" id="github-mark" href="https://github.com/adbergen" target="_blank">
+              <img class="img-fluid" src="assets/images/github-mark/github-mark-32px.png" alt="github mark icon">
+            </a>
+            <a class="nav-item nav-link ml-auto" id="linkedin" href="www.linkedin.com/in/anthonybergen" target="_blank">
+              <img class="img-fluid" src="assets/images/linkedin/linkedin.png" alt="linkedin icon">
+            </a>
             <!-- navbar links end here -->
           </div>
         </div>
@@ -53,7 +60,7 @@
           <hr>
           <img class="img-fluid rounded-circle p-3 mx-auto"
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
-            alt="Image of me">
+            alt="image of Anthony Bergen">
           <div class="card-body">
             <div class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
               development.
