--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -33,6 +33,13 @@
             <a class="nav-item nav-link ml-auto" href="../../index.html">About</a>
             <a class="nav-item nav-link ml-auto active" href="portfolio.html">Portfolio</a>
             <a class="nav-item nav-link ml-auto" href="contact.html">Contact</a>
+            <a class="nav-item nav-link ml-auto" id="github-mark" href="https://github.com/adbergen" target="_blank">
+              <img class="img-fluid" src="assets/images/github-mark/github-mark-32px.png" alt="github mark icon">
+            </a>
+            <a class="nav-item nav-link ml-auto" id="linkedin" href="www.linkedin.com/in/anthonybergen" target="_blank">
+              <img class="img-fluid" src="assets/images/linkedin/linkedin.png" alt="linkedin icon">
+            </a>
+            <!-- navba
             <!-- navbar links end here -->
           </div>
         </div>
