fixed icons to appear static

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -34,10 +34,10 @@
             <a class="nav-item nav-link ml-auto" href="portfolio.html">Portfolio</a>
             <a class="nav-item nav-link ml-auto active" href="contact.html">Contact</a>
             <a class="nav-item nav-link ml-auto" id="github-mark" href="https://github.com/adbergen" target="_blank">
-              <img class="img-fluid" src="assets/images/github-mark/github-mark-32px.png" alt="github mark icon">
+              <img class="img-fluid" src="../images/github-mark/github-mark-32px.png" alt="github mark icon">
             </a>
             <a class="nav-item nav-link ml-auto" id="linkedin" href="www.linkedin.com/in/anthonybergen" target="_blank">
-              <img class="img-fluid" src="assets/images/linkedin/linkedin.png" alt="linkedin icon">
+              <img class="img-fluid" src="../images/linkedin/linkedin.png" alt="linkedin icon">
             </a>
             <!-- navba
             <!-- navbar links end here -->
