added working linkedin link

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -36,7 +36,8 @@
             <a class="nav-item nav-link ml-auto" id="github-mark" href="https://github.com/adbergen" target="_blank">
               <img class="img-fluid" src="../images/github-mark/github-mark-32px.png" alt="github mark icon">
             </a>
-            <a class="nav-item nav-link ml-auto" id="linkedin" href="www.linkedin.com/in/anthonybergen" target="_blank">
+            <a class="nav-item nav-link ml-auto" id="linkedin" href="https://linkedin.com/in/anthonybergen"
+              target="_blank">
               <img class="img-fluid" src="../images/linkedin/linkedin.png" alt="linkedin icon">
             </a>
             <!-- navba
