--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -109,9 +109,7 @@
 
   <!-- footer starts here -->
   <footer class="page-footer footer-expand fixed-bottom">
-    <div class="text-center py-2 bg-primary"><strong>Created by Anthony Bergen |</strong>
-      <a href="https://adbergen.github.io/responsiveness-portfolio/">https://adbergen.github.io/responsiveness-portfolio/
-      </a>
+    <div class="text-center py-2 bg-primary"><strong>| Created by Anthony Bergen |</strong>
     </div>
   </footer>
   <!-- footer ends here -->
