fixed path for portfolio image

--- a/assets/html/portfolio.html
+++ b/assets/html/portfolio.html
@@ -68,7 +68,7 @@
         <section class="card border border-dark">
           <h3 class="card-title pt-4">Read Your Movie</h3>
           <hr>
-          <img class="img-fluid p-3 mx-auto" src="/assets/images/portfolio/readyourmovie.PNG" alt="Image of me">
+          <img class="img-fluid p-3 mx-auto" src="../images/portfolio/readyourmovie.PNG" alt="Image of me">
           <div class="card-body">
             <div class="card-text p-2">
               <a href="https://mi6gy.github.io/read_your_movie/"><strong>View</strong></a>
@@ -80,7 +80,7 @@
         <section class="card border border-dark">
           <h3 class="card-title pt-4">Work Day Scheduler</h3>
           <hr>
-          <img class="img-fluid p-3 mx-auto" src="/assets/images/portfolio/scheduler.PNG" alt="Image of scheduler demo">
+          <img class="img-fluid p-3 mx-auto" src="../images/portfolio/scheduler.PNG" alt="Image of scheduler demo">
           <div class="card-body">
             <div class="card-text p-2">
               <a href="https://adbergen.github.io/work-day-scheduler/"><strong>View</strong></a>
@@ -92,7 +92,7 @@
         <section class="card border border-dark">
           <h3 class="card-title pt-4">Aussie Quiz</h3>
           <hr>
-          <img class="img-fluid p-3 mx-auto" src="/assets/images/portfolio/quiz.PNG" alt="Image of quiz demo">
+          <img class="img-fluid p-3 mx-auto" src="../images/portfolio/quiz.PNG" alt="Image of quiz demo">
           <div class="card-body">
             <div class="card-text p-2">
               <a href="https://adbergen.github.io/code-quiz/"><strong>View</strong></a>
@@ -108,7 +108,7 @@
         <section class="card border border-dark">
           <h3 class="card-title pt-4">Password Generator</h3>
           <hr>
-          <img class="img-fluid p-3 mx-auto" src="/assets/images/portfolio/password.PNG"
+          <img class="img-fluid p-3 mx-auto" src="../images/portfolio/password.PNG"
             alt="Image of password generator demo">
           <div class="card-body">
             <div class="card-text p-2">
